<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <EditText
        android:id="@+id/editText_location_admin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/admin_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_admin_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/admin_cost"
        app:layout_constraintEnd_toEndOf="@+id/editText_location_admin"
        app:layout_constraintStart_toStartOf="@+id/editText_location_admin"
        app:layout_constraintTop_toBottomOf="@+id/editText_location_admin" />

    <EditText
        android:id="@+id/editText_admin_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/admin_name"
        app:layout_constraintEnd_toEndOf="@+id/editText_admin_cost"
        app:layout_constraintStart_toStartOf="@+id/editText_admin_cost"
        app:layout_constraintTop_toBottomOf="@+id/editText_admin_cost" />

    <Button
        android:id="@+id/button_admin_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_admin_select_image"
        app:layout_constraintEnd_toEndOf="@+id/editText_admin_title"
        app:layout_constraintStart_toStartOf="@+id/editText_admin_title"
        app:layout_constraintTop_toBottomOf="@+id/editText_admin_title" />

    <ImageView
        android:id="@+id/imageView_admin_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/admin_content_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_admin_image"
        app:srcCompat="@android:drawable/alert_dark_frame" />
</androidx.constraintlayout.widget.ConstraintLayout>